[package]
name = "agent-046"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = false

[dependencies]
syn = "1.0"
quote = "1.0"
derive_more = { version = "0.99.18" , features = ["from" , "display", "default", "constructor"] }
enum_macro = { path = "../enum_macro"}
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14"